--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<div class="bg-white py-24 sm:py-32">
+<div id="dashboardHandles" class="bg-white py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-2xl lg:mx-0">
       <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">NBA Basketball Fantasy 3v3</h2>
@@ -14,58 +14,83 @@
               <span class="absolute inset-0"></span>
               My Favorite Player
             </a>
+            <h2 id="profile-heads">Nikola Jokic{{name}}</h2>
           </h3>
           <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600"></p>
         </div>
         <div class="relative mt-8 flex items-center gap-x-4">
-          <img src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" class="h-10 w-10 rounded-full bg-gray-50">
+          <img src="https://cdn.nba.com/headshots/nba/latest/1040x760/203999.png" alt="" class="object-scale-down h-48 w-96 ...">
           <div class="text-sm leading-6">
             <p class="font-semibold text-gray-900">
               <a href="#">
-                <span class="absolute inset-0"></span>
-                Michael Foster
+                <span class="absolute inset-0" ></span>
+                
               </a>
             </p>
-            <p class="text-gray-600">Ranking</p>
+            
           </div>
         </div>
       </article>
 
-      <ul role="list" class="divide-y divide-gray-100">
+      <div class="group relative">
+          <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
+            <a href="#" class="grid grid-rows-3 grid-flow-col gap-4 py-3">
+              <span class="absolute inset-0"></span>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Nikola Jokic</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Giannis Antetokounmpo</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Luka Doncic</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Jayson Tatum</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Joel Embiid</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Kevin Durant</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Steph Curry</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Lebron James</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Ja Morant</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Damian Lillard</button>
+            </a>
+          </h3>
+          <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600"></p>
+        </div>
+
+      <ul role="list" class="divide-y divide-gray-100 py-5">
   <li class="flex justify-between gap-x-6 py-5">
     <div class="flex min-w-0 gap-x-4">
-      <img class="h-12 w-12 flex-none rounded-full bg-gray-50" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+      <img class="object-scale-down h-12 w-36 ..." src="https://cdn.nba.com/headshots/nba/latest/1040x760/203507.png" alt="">
       <div class="min-w-0 flex-auto">
-        <p class="text-sm font-semibold leading-6 text-gray-900">Leslie Alexander</p>
+        <p class="text-sm font-semibold leading-6 text-gray-900">Giannis Antetokounmpo{{name}}</p>
         <p class="mt-1 truncate text-xs leading-5 text-gray-500">Player 1</p>
       </div>
     </div>
     <div class="hidden shrink-0 sm:flex sm:flex-col sm:items-end">
-      <p class="text-sm leading-6 text-gray-900">Co-Founder / CEO</p>
-      <p class="mt-1 text-xs leading-5 text-gray-500">Last seen <time datetime="2023-01-23T13:23Z">3h ago</time></p>
+      <p class="text-sm leading-6 text-gray-900">Ranking</p>
+      <p class="mt-1 text-xs leading-5 text-gray-500">{{ranking}}
     </div>
   </li>
   <li class="flex justify-between gap-x-6 py-5">
     <div class="flex min-w-0 gap-x-4">
-      <img class="h-12 w-12 flex-none rounded-full bg-gray-50" src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+      <img class="object-scale-down h-12 w-36 ..." src="https://cdn.nba.com/headshots/nba/latest/1040x760/1629029.png" alt="">
       <div class="min-w-0 flex-auto">
-        <p class="text-sm font-semibold leading-6 text-gray-900">Michael Foster</p>
+        <p class="text-sm font-semibold leading-6 text-gray-900">Luka Doncic{{name}}</p>
         <p class="mt-1 truncate text-xs leading-5 text-gray-500">Player 2</p>
       </div>
     </div>
     <div class="hidden shrink-0 sm:flex sm:flex-col sm:items-end">
-      <p class="text-sm leading-6 text-gray-900">Co-Founder / CTO</p>
-      <p class="mt-1 text-xs leading-5 text-gray-500">Last seen <time datetime="2023-01-23T13:23Z">3h ago</time></p>
+      <p class="text-sm leading-6 text-gray-900">Ranking</p>
+      <p class="mt-1 text-xs leading-5 text-gray-500">{{ranking}}
     </div>
   </li>
   <li class="flex justify-between gap-x-6 py-5">
     <div class="flex min-w-0 gap-x-4">
-      <img class="h-12 w-12 flex-none rounded-full bg-gray-50" src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+      <img class="object-scale-down h-12 w-36 ..." src="https://cdn.nba.com/headshots/nba/latest/1040x760/201939.png" alt="">
       <div class="min-w-0 flex-auto">
-        <p class="text-sm font-semibold leading-6 text-gray-900">Dries Vincent</p>
+        <p class="text-sm font-semibold leading-6 text-gray-900">Steph Curry{{name}}</p>
         <p class="mt-1 truncate text-xs leading-5 text-gray-500">Player 3</p>
       </div>
     </div>
+    <div class="hidden shrink-0 sm:flex sm:flex-col sm:items-end">
+      <p class="text-sm leading-6 text-gray-900">Ranking</p>
+      <p class="mt-1 text-xs leading-5 text-gray-500">{{ranking}}
+    </div>
+  </li>
 </ul>
 
 
