--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -51,34 +51,34 @@
             <span class="absolute inset-0"></span>
             <button
               class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"
-              data-id="{{player.ranking}}">Nikola Jokic</button>
+              data-id="{{player.id}}">Nikola Jokic</button>
             <button
               class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"
-              data-id="{{player.ranking}}">Giannis Antetokounmpo</button>
+              data-id="{{player.id}}">Giannis Antetokounmpo</button>
             <button
               class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"
-              data-id="{{player.ranking}}">Luka Doncic</button>
+              data-id="{{player.id}}">Luka Doncic</button>
             <button
               class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"
-              data-id="{{player.ranking}}">Jayson Tatum</button>
+              data-id="{{player.id}}">Jayson Tatum</button>
             <button
               class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"
-              data-id="{{player.ranking}}">Joel Embiid</button>
+              data-id="{{player.id}}">Joel Embiid</button>
             <button
               class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"
-              data-id="{{player.ranking}}">Kevin Durant</button>
+              data-id="{{player.id}}">Kevin Durant</button>
             <button
               class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"
-              data-id="{{player.ranking}}">Steph Curry</button>
+              data-id="{{player.id}}">Steph Curry</button>
             <button
               class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"
-              data-id="{{player.ranking}}">Lebron James</button>
+              data-id="{{player.id}}">Lebron James</button>
             <button
               class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"
-              data-id="{{player.ranking}}">Ja Morant</button>
+              data-id="{{player.id}}">Ja Morant</button>
             <button
               class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"
-              data-id="{{player.ranking}}">Damian Lillard</button>
+              data-id="{{player.id}}">Damian Lillard</button>
           </a>
         </h3>
         <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600"></p>
@@ -115,7 +115,7 @@
         </li> --}}
         <div class="playerContainer">
           {{#each players as |player|}}
-          <div class="players" data-id={{player.ranking}}>
+          <div class="players" data-id={{player.id}}>
             <li class="flex justify-between gap-x-6 py-5">
               <div class="flex min-w-0 gap-x-4">
                 <img class="object-scale-down h-12 w-36 ..." src={{player.img}} alt="">
@@ -130,7 +130,7 @@
               </div>
             </li>
           </div>
-          <button class="addBtn" data-id={{player.ranking}}>Add</button>
+          <button class="addBtn" data-id={{player.id}}>Add</button>
           {{/each}}
         </div>
 
