style login and signup

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,8 +42,8 @@
           </div>
           <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
             <div class="flex flex-shrink-0 items-center">
-              <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500"
-                alt="Your Company">
+              <img class="h-8 w-auto" src="images/basketball.png" alt="A beautiful image" width="300" height="200">
+                {{!-- alt="Your Company"> --}}
             </div>
             <div class="hidden sm:ml-6 sm:block">
               <div class="flex space-x-4">
@@ -89,7 +89,7 @@
               From: "transform opacity-100 scale-100"
               To: "transform opacity-0 scale-95"
           -->
-              <div
+              {{!-- <div
                 class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
                 role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
                 <!-- Active: "bg-gray-100", Not Active: "" -->
@@ -97,7 +97,7 @@
                   id="user-menu-item-0">Your Profile</a>
                 <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
                   id="user-menu-item-2">Sign out</a>
-              </div>
+              </div> --}}
             </div>
           </div>
         </div>
@@ -117,7 +117,7 @@
             class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Calendar</a>
         </div>
       </div>
-      <button id="logout">logout</button>
+      {{!-- <button id="logout">logout</button> --}}
     </nav>
 
 
