--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -537,7 +537,7 @@ video {
 .container {
   width: 100%;
 }
-
+/*
 @media (min-width: 640px) {
   .container {
     max-width: 640px;
@@ -550,7 +550,7 @@ video {
   }
 }
 
-@media (min-width: 1024px) {
+ @media (min-width: 1024px) {
   .container {
     max-width: 1024px;
   }
@@ -566,7 +566,7 @@ video {
   .container {
     max-width: 1536px;
   }
-}
+} */
 
 .sr-only {
   position: absolute;
@@ -647,12 +647,21 @@ video {
   margin-left: 0.75rem;
 }
 
+.ml-4 {
+  margin-left: 0.75rem;
+}
+
 .mt-1 {
   margin-top: 0.25rem;
 }
 
 .mt-10 {
   margin-top: 2.5rem;
+  float: right;
+  /* margin-left: 200px; */
+  margin-left: calc(2.5rem * var(--tw-space-y-reverse));
+  /* margin-right: auto; */
+  /* margin-top: 5.5rem; */
 }
 
 .mt-2 {
@@ -667,9 +676,9 @@ video {
   margin-top: 1rem;
 }
 
-.mt-5 {
+/* .mt-5 {
   margin-top: 1.25rem;
-}
+} */
 
 .mt-8 {
   margin-top: 2rem;
@@ -683,7 +692,8 @@ video {
 }
 
 .block {
-  display: block;
+  margin-bottom: 16px;
+  /* display: block; */
 }
 
 .flex {
@@ -881,6 +891,7 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+  margin-left: calc(2.5rem * var(--tw-space-y-reverse));
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]) {
@@ -892,6 +903,15 @@ video {
 .divide-gray-100 > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-divide-opacity));
+}
+.authContainer{
+  display: flex;
+  justify-content: space-around;
+}
+
+.bg-image{
+  background-image: url("../images/loginImg.webp");
+  background-size: cover;
 }
 
 .truncate {
@@ -920,9 +940,9 @@ video {
   border-width: 0px;
 }
 
-.border-b {
+/* .border-b {
   border-bottom-width: 1px;
-}
+} */
 
 .border-t {
   border-top-width: 1px;
@@ -1174,6 +1194,10 @@ video {
   opacity: 1;
 }
 
+.p-1{
+  padding: 0.75rem;
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1362,9 +1386,9 @@ video {
     width: 100%;
   }
 
-  .sm\:max-w-sm {
+  /* .sm\:max-w-sm {
     max-width: 24rem;
-  }
+  } */
 
   .sm\:flex-col {
     flex-direction: column;
