--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -50,6 +50,7 @@
                   aria-current="page">Homepage</a>
                 <a href="/dashboard" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium"
                   aria-current="page">Dashboard</a>
+                <button id="logout">logout</button>
               </div>
             </div>
           </div>
@@ -87,10 +88,9 @@
           </div>
         </div>
       </div>
-      <button id="logout">logout</button>
     </nav>
 
-    <main class="container container-fluid mt-5">
+    <main class="container container-fluid mt-5 bg-grey-500">
       <!-- Render the sub layout -->
       {{{ body }}}
     </main>
