fixed the logout button again

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -50,7 +50,7 @@
                   aria-current="page">Homepage</a>
                 <a href="/dashboard" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium"
                   aria-current="page">Dashboard</a>
-                <button id="logout">logout</button>
+                <button class="btn1" id="logout" type="logout">logout</button>
               </div>
             </div>
           </div>
