--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -222,6 +222,13 @@ select {
 1. Correct the inability to style clickable types in iOS and Safari.
 2. Remove default button styles.
 */
+#logout {
+  padding: 0.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+}
+
 
 button,
 [type='button'],
